--- a/webapp/src/styles/_utils.scss
+++ b/webapp/src/styles/_utils.scss
@@ -79,15 +79,15 @@
     margin-top: 0;
 }
 
-.items-center {
+.align-items-center {
     align-items: center;
 }
 
-.items-start {
+.align-items-start {
     align-items: flex-start;
 }
 
-.items-end {
+.align-items-end {
     align-items: flex-end;
 }
 
