--- a/webapp/src/styles/_utils.scss
+++ b/webapp/src/styles/_utils.scss
@@ -193,3 +193,15 @@
 .elevation-2 {
     box-shadow: var(--elevation-2);
 }
+
+.bg-success {
+    background-color: var(--online-indicator);
+}
+
+.bg-default {
+    background-color: var(--center-channel-color);
+}
+
+.bg-error {
+    background-color: var(--error-text);
+}
