--- a/webapp/src/styles/_utils.scss
+++ b/webapp/src/styles/_utils.scss
@@ -45,6 +45,10 @@
     .m-#{$size} {
         margin: #{$size}px !important;
     }
+
+    .mt-#{$size} {
+        margin-top: #{$size}px !important;
+    }    
 }
 
 // margin block
