--- a/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
+++ b/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
@@ -31,7 +31,7 @@
       width: 95%;
     }
 
-    &__body-values {
+    &__entity-label {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
