--- a/webapp/src/styles/_utils.scss
+++ b/webapp/src/styles/_utils.scss
@@ -38,12 +38,24 @@
     .p-#{$size} {
         padding: #{$size}px !important;
     }
+
+    .pt-#{$size} {
+        padding-top: #{$size}px !important;
+    }
 }
 
 // margin
 @each $size in $sizes {
     .m-#{$size} {
         margin: #{$size}px !important;
+    }
+
+    .mt-#{$size} {
+        margin-top: #{$size}px !important;
+    }
+
+    .mb-#{$size} {
+        margin-bottom: #{$size}px !important;
     }
 }
 
@@ -98,18 +110,6 @@
     .#{$position} {
         position: $position !important;
     }
-}
-
-.mt-0 {
-    margin-top: 0;
-}
-
-.pt-0 {
-    padding-top: 0 !important;
-}
-
-.mt-10 {
-    margin-top: 10px;
 }
 
 .align-items-center {
