[MI-3834] Add unlink button on hover state on linked channel list

--- a/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
+++ b/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
@@ -2,6 +2,26 @@
 
   .msteams-linked-channel {
 
+    &__unlink-icon {
+      width: 15%;
+      display: none;
+      
+      svg {
+        path,rect{
+          color: var(--center-channel-color-56);
+        }
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: var(--center-channel-color-08);
+
+      .msteams-linked-channel__unlink-icon {
+        display: flex;
+      }
+    }
+
     &__link-icon {
 
       &::before {
@@ -28,14 +48,14 @@
     }
 
     &__body {
-      width: 95%;
+      width: 80%;
     }
 
     &__body-values {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 45%;
+      max-width: 35%;
       line-height: inherit;
     }  
   }
