--- a/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
+++ b/webapp/src/components/LinkedChannelCard/LinkedChannelCard.styles.scss
@@ -36,7 +36,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 45%;
-      line-height: inherit;
+      line-height: normal;
     }  
   }
 }
